--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         </div>
 
         <div id="cont3">
-        <p>Excellent 10000+ view</p>
+        <p style="color: grey;"></p> Excellent 10000+ view</p>
         <p>&#11088&#11088&#11088&#11088&#11088</p>
 
         </div>
